applications/pipeline/upstream/base/metadata/options/istio/destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: metadata-grpc-service
spec:
  host: metadata-grpc-service.kubeflow.svc.cluster.pakcarik
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
